--- a/Clients/angularapp/src/index.html
+++ b/Clients/angularapp/src/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angularapp</title>
+  <title>BudgetBuddy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+
+  <div class="text-center mt-4">
+    <p>
+      Footer
+    </p>    
+</div>
 </body>
 </html>
